      for large finite \code{L}, thanks to Long Qu's \PR{17611}.

      Analogously, \code{x \%/\% L} and \code{L \%/\% x} suffer less from
      cancellation and return values corresponding to limits for large
      \code{L}.

      \item Certain \code{Ops} (notably comparison such as \code{==}) now
      also work for 0-length data frames, after reports by Hilmar Berger.
    }
  }
}

\section{\Rlogo CHANGES IN R 3.6.1 patched}{

  \subsection{NEW FEATURES}{
    \itemize{
      \item \code{runmed(x, *)} gets new option \code{na.action}
      determining \emph{how} to handle \code{NaN} or \code{NA} in \code{x}.
    }
  }

  \subsection{INSTALLATION on a UNIX-ALIKE}{
    \itemize{
      \item Detection of the C stack direction has been moved from
      run-time to \command{configure}: this is safer with LTO builds and
      allows the detection to be overridden -- see file
      \file{config.site}.
    }
  }

  \subsection{C-LEVEL FACILITIES}{
    \itemize{
      \item \code{installTrChar} (which is nowadays is wrapped by
      \code{installChar}) is defined in \file{Rinternals.h}.  (Neither
      are part of the API.)
    }
  }

  \subsection{PACKAGE INSTALLATION}{
    \itemize{
      \item Header \file{Rconfig.h} contains the value of
      \code{FC_LEN_T} deduced at installation which is used by the
      prototypes in headers \file{R_ext/BLAS.h} and
      \file{R_ext/Lapack.h} but to avoid extensive breakage this is
      only exposed when \code{USE_FC_LEN_T} is defined.

      If a package's C/C++ calls to BLAS/LAPACK allow for the
      \sQuote{hidden} arguments used by most Fortran compilers to pass
      the lengths of Fortran character arguments, define
      \code{USE_FC_LEN_T} and include \file{Rconfig.h} (possibly
      \emph{via} \file{R.h}) before including \file{R_ext/BLAS.h} or
      \file{R_ext/Lapack.h}.

      \item A package with Fortran source code and perhaps C (but not
      C++) sources can request for its shared object/DLL to be linked by