@@ -1,7 +1,7 @@
 #  File src/library/utils/R/objects.R
 #  Part of the R package, https://www.R-project.org
 #
-#  Copyright (C) 1995-2016 The R Core Team
+#  Copyright (C) 1995-2019 The R Core Team
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -64,6 +64,10 @@ findGeneric <- function(fname, envir, warnS4only = TRUE)
     isUME(body(f))
 }
 
+## deparse(.) returning *one* string  {not exported (yet)}:
+deparse1 <- function(x, collapse=" ", ...)
+    paste(deparse(x, 500L, ...), collapse=collapse)
+
 getKnownS3generics <-
 function()
     c(names(.knownS3Generics), tools:::.get_internal_S3_generics())
@@ -105,7 +109,7 @@ function(generic.function, class, envir=parent.frame())
                        row.names = an)
     if (!missing(generic.function)) {
 	if (!is.character(generic.function))
-	    generic.function <- deparse(substitute(generic.function))
+	    generic.function <- deparse1(substitute(generic.function))
         ## else
         if(!exists(generic.function, mode = "function", envir = envir) &&
            !any(generic.function == c("Math", "Ops", "Complex", "Summary")))
@@ -158,7 +162,11 @@ function(generic.function, class, envir=parent.frame())
     }
     else if (!missing(class)) {
 	if (!is.character(class))
-	    class <- paste(deparse(substitute(class)))
+	    class <- deparse1(substitute(class))
+	if(length(class) > 1L) {
+	    warning("'class' is of length > 1; only the first element will be used")
+	    class <- class[1L]
+	}
 	name <- paste0(".", class, "$")
         name <- gsub("([.[])", "\\\\\\1", name)
         info <- info[grep(name, row.names(info)), ]
@@ -224,7 +232,7 @@ function(generic.function, class)
     }
 
     if (!missing(class) && !is.character(class))
-        class <- paste(deparse(substitute(class)))
+        class <- deparse1(substitute(class))
 
     s3 <- .S3methods(generic.function, class, envir)
     s4 <- if (.isMethodsDispatchOn()) {
